namespace Battle.Model.Attack
{
    public interface IPlayerAttackHitView
    {
        public void OnHit(AttackParameter attackParameter);
    }
}